# EZWowX2

./: .gitignore  0001_base.lua  0002_config.lua  0003_panel.lua  0004_color.lua  0005_matrix.lua  0006_cell_variable_define.lua  0007_aura_common.lua  0007_aura_slot_container.lua  0008_aura_group_container.lua  01Base.lua  02Config.lua  03Panel.lua  08Color.lua  1001_player_is_alive.lua  1006_player_power_pct.lua  1011_player_melee_enemies_count.lua  1012_player_is_targeting_spell.lua  1017_player_healthstone_ready.lua  1019_player_cast_info.lua  1020_player_cast_target.lua  1022_player_has_big_defensive.lua  1023_player_has_dispellable_debuff.lua  1026_player_heal_absorb.lua  1041_target_is_exists.lua  1042_target_is_alive.lua  1043_target_health_pct.lua  1044_target_is_enemy.lua  1046_target_in_ranged.lua  1047_target_in_melee.lua  1048_target_in_combat.lua  1049_target_cast_info.lua  1051_target_has_dispellable_buff.lua  1051_target_is_exists.lua  1053_target_health_pct.lua  1055_target_can_attack.lua  1057_target_in_melee.lua  1059_target_cast_info.lua  1061_focus_is_exists.lua  1064_focus_is_enemy.lua  (+46 more)
Dumper/: Database.py  (+4 more)
EZBridgeX2/: main.py  pyproject.toml
EZBridgeX2/EZBridgeX2/: __init__.py  application.py
EZBridgeX2/EZBridgeX2/core/: __init__.py  database.py  node.py  node_extractor_data.py
EZBridgeX2/EZBridgeX2/ui/: __init__.py  info_display_tab.py  main_window.py
EZBridgeX2/EZBridgeX2/utils/: __init__.py  color_map.py  image_utils.py  img_mark.py
EZBridgeX2/tools/: migrate_node_titles_export_v1_to_v2.py  migrate_node_titles_to_database_sqlite.py
(+120 files in other folders)
